# debreate

./: .gitignore  .mypy.ini  .project  .pylintrc  BUGS.txt  CMakeLists.txt  GNUmakefile  INFO  Makefile  Makefile.in  README  README.md  README.txt  TODO.txt  _md5.py  build.conf  build.py  command_line.py  common.py  db.py  db_md5.py  debreate.desktop  debreate.py  globals.py  init.py  install.conf  install.py  language.py  launch.py  main.py  panbuild.py  panclog.py  pancontrol.py  pancopyright.py  pandepends.py  panfiles.py  paninfo.py  panmenu.py  panscripts.py  setup.py  (+3 more)
.github/workflows/: code_quality.yml  deploy_release.yml  unit_tests.yml
branches/BR_0.7/: common.py
branches/branch-0.7.10/: common.py
compat/: __init__.py
data/: debreate.desktop  debreate.mime  postinst.in  postrm.in
data/lintian/: tags
data/mime/: debreate.xml
db/: dbabout.py  dbbuttons.py  dbcharctrl.py  dbmessage.py  dbpathctrl.py  dbwizard.py
dbr/: __init__.py  about.py  app.py  buttons.py  charctrl.py  checklist.py  colors.py  command_line.py  commandcheck.py  compat.py  compression.py  config.py  constants.py  containers.py  cursor.py  custom.py  dialogs.py  distcache.py  error.py  event.py  filedrop.py  firstrun.py  font.py  functions.py  help.py  hyperlink.py  icon.py  image.py  imagelist.py  language.py  listinput.py  log.py  logwindow.py  mansect.py  markdown.py  md5.py  menu.py  message.py  monotext.py  panel.py  (+13 more)
debian/: README.Debian  README.source  changelog  control  copyright  debreate.mime  postinst  postrm  prerm  rules
docs/: BUGS.txt  Doxyfile  LICENSE.txt  TODO.txt  changelog  changelog.txt  changelog0.7  release_notes  tests.txt
f_export/: __init__.py  ftarget.py  ofield.py  permiss.py
fields/: __init__.py  cfgfield.py  cmdfield.py  ifield.py
fileio/: __init__.py  fileio.py
functions/: commandcheck.py
globals/: __init__.py  application.py  bitmaps.py  changes.py  characters.py  cmdcheck.py  colors.py  commands.py  compression.py  constants.py  dateinfo.py  debugging.py  devices.py  errorcodes.py  execute.py  file.py  fileio.py  fileitem.py  filetype.py  ident.py  mime.py  moduleaccess.py  paths.py  project.py  remote.py  stage.py  strings.py  system.py  tests.py  threads.py  tooltips.py  wizardhelper.py
input/: __init__.py  cfgfield.py  charctrl.py  essential.py  filelist.py  ifield.py  list.py  markdown.py  pathctrl.py  select.py  text.py  toggle.py
lib/libdbr/: __init__.py  bin.py  clformat.py  compat.py  config.py  dateinfo.py  fileinfo.py  fileio.py  logger.py  misc.py  modules.py  paths.py  strings.py  sysinfo.py  tasks.py  types.py  unittest.py  userinfo.py
lib/libdebreate/: __init__.py  abstraction.py  appinfo.py  dbrfile.py  ident.py
locale/: debreate.pot
locale/ar/: debreate.po
locale/es/: debreate.po
locale/fr/: debreate.po
locale/it/: debreate.po
locale/ko/: debreate.po
locale/ru/: debreate.po
man/: debreate.1
man/man1/: debreate.1
output/: __init__.py  ftarget.py
page/: build.py  control.py  depends.py  files.py  info.py  menu.py  panbuild.py  panclog.py  pancontrol.py  pancopyright.py  pandepends.py  panfiles.py  paninfo.py  panmenu.py  panscripts.py  scripts.py
pages/: panbuild.py  panclog.py  panscripts.py
scripts/: add-changelog.py  add-changes.py  clean-whitespace.py  doxygen-format.py  replace-characters.py  scripts_globals.py  test.sh  update-debian-changelog.py  update-locale.py  update-locale.sh  update-version.py
src/: Makefile  common.py  debreate.py  launch.py  panclog.py  pancontrol.py  pancopyright.py  pandepends.py  panfiles.py  paninfo.py  panmenu.py  panscripts.py
src/db/: dbabout.py  dbcharctrl.py  dbmessage.py  dbpathctrl.py  dbwizard.py
src/docs/: changelog
src/locale/: Makefile
startup/: __init__.py  command_line.py  firstrun.py  startup.py  tests.py  wxprompt.py
system/: __init__.py  display.py
templates/licenses/: BSD-2-Clause  BSD-4-Clause  EPL-1.0  ISC  MIT-X  OFL-1.1  zlib-png
tests/: disabled_testTreeList.py  ignoreme  testDBRFile.py  testFileCompression.py  testFileCreation.py  testHashing.py  testLatestChanges.py  testMD5Sums.py  testPaths.py  testSystem.py
tests/data/: legacy_project_sample.dbp
tests/introspect/: testInitNonFunction.py  testInitNotDefined.py  testReturnNonZero.py  testReturnNone.py  (+2 more)
trunk/: BSDmakefile  COPYING  Makefile.am  README.md  clean.sh  configure.ac  license-GPL3.txt
trunk/data/: config
trunk/docs/: changelog
trunk/locale/it/LC_MESSAGES/: debreate.mo
trunk/src/: Makefile.am  common.py  constants.py  db.py  debreate.py  debug.py  launch.py  paninfo.py  panscripts.py  wizard.py
trunk/src/config/: config.py  configparser.py  userconfig.py
trunk/src/db/: dbabout.py  dbbuttons.py  dbmessage.py  dbwizard.py
trunk/src/debug/: debugmessage.py
trunk/src/decor/: buttons.py
trunk/src/info/: dialog.py
trunk/src/locale/es/: debreate.po
trunk/src/misc/: constants.py  main.py  window.py
trunk/src/panel/: info.py
trunk/src/tests/: tests.py
ui/: __init__.py  about.py  app.py  button.py  charctrl.py  checklist.py  dialog.py  distcache.py  font.py  help.py  helper.py  hyperlink.py  inputlist.py  inputselect.py  inputtext.py  launcher.py  layout.py  listinput.py  logwindow.py  main.py  mansect.py  manual.py  markdown.py  menu.py  notebook.py  output.py  page.py  panel.py  pathctrl.py  progress.py  prompt.py  quickbuild.py  selectinput.py  startpage.py  statusbar.py  style.py  textinput.py  textpreview.py  tree.py  wizard.py
util/: __init__.py  appinfo.py  depends.py  logger.py
web/: globals  index.php  style.css
wiz/: __init__.py  helper.py  pginit.py  wizard.py
wiz_bin/: __init__.py  build.py  changelog.py  clog.py  control.py  copyright.py  depends.py  files.py  greeting.py  info.py  launchers.py  man.py  manuals.py  menu.py  scripts.py
wiz_src/: __init__.py  control.py
wizbin/: __init__.py  build.py  changelog.py  control.py  copyright.py  depends.py  files.py  greeting.py  launchers.py  manuals.py  scripts.py
wizsrc/: __init__.py  control.py
wxcustom/: __init__.py  cursor.py  imagelist.py  listinput.py  tree.py
(+31 files in other folders)
